<version new> add text to strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,7 +95,7 @@
     <string name="average_mood">Average mood</string>
     <string name="mood_chart">Mood Chart</string>
     <string name="weekly_mood_average">Weekly Mood Average</string>
-    <string name="not_enough_data_to_draw_this_chart_ncome_back_later">Not enough data to draw this chart.\nCome back later!!</string>
+    <string name="not_enough_data_to_draw_this_chart_come_back_later">Not enough data to draw this chart.\nCome back later!!</string>
     <string name="_0">0</string>
     <string name="how_was_your_mood">How was your mood?</string>
     <string name="starting_date">Starting Date</string>
@@ -106,5 +106,70 @@
     <string name="update_times">Update Times</string>
     <string name="update_medicine">Update Medicine</string>
     <string name="profile">Profile</string>
+    <string name="touch_profile_picture_to_change">touch profile picture to change</string>
+    <string name="press_to_edit_delete">Press to edit/delete</string>
+    <string name="lab_test_name">Lab Test Name</string>
+    <string name="time_12_12_2022">Time : 12/12/2022</string>
+    <string name="doctor_name">Doctor Name</string>
+    <string name="info">Info</string>
+    <string name="task">Task:</string>
+    <string name="finishing_date">Finishing Date:</string>
+    <string name="account">account</string>
+    <string name="notes">notes</string>
+    <string name="to_do">To-Do</string>
+    <string name="tests">tests</string>
+    <string name="habits">habits</string>
+    <string name="about_us">about us</string>
+    <string name="logout">logout</string>
+    <string name="no_medicines">No Medicines</string>
+    <string name="your_medicines">Your Medicines</string>
+    <string name="habit_tracker">Habit Tracker</string>
+    <string name="reason">Reason</string>
+    <string name="add_a_new_task">Add a New Task</string>
+    <string name="task_name">Task Name</string>
+    <string name="medicine_name">Medicine Name</string>
+    <string name="time_1500">Time : 1500</string>
+    <string name="before_food">Before food</string>
+    <string name="dose">dose</string>
+    <string name="after_food">After Food</string>
+    <string name="morning">Morning</string>
+    <string name="afternoon">afternoon</string>
+    <string name="night">Night</string>
+    <string name="custom">Custom</string>
+    <string name="update">update</string>
+    <string name="cancel">Cancel</string>
+    <string name="to_do_list">To-Do List</string>
+    <string name="my_completed_tasks">My Completed Tasks</string>
+    <string name="my_pending_tasks">My Pending Tasks</string>
+    <string name="dismiss">DISMISS</string>
+    <string name="i_have_taken_my_medicine">I have taken my Medicine</string>
+    <string name="self_assessment_quiz">Self-Assessment Quiz</string>
+    <string name="anxiety">anxiety</string>
+    <string name="depression">depression</string>
+    <string name="ptsd">ptsd</string>
+    <string name="ocd">ocd</string>
+    <string name="bipolar">bipolar</string>
+    <string name="adhd">adhd</string>
+    <string name="new_habit">New Habit</string>
+    <string name="habit_name">Habit name:</string>
+    <string name="end_date">End date:</string>
+    <string name="frequency">Frequency:</string>
+    <string name="add_new_habit">Add new habit</string>
+    <string name="pills">Pills</string>
+    <string name="visits">Visits</string>
+    <string name="labs">Labs</string>
+    <string name="_5_30_minutes">5–30 minutes</string>
+    <string name="set">Set</string>
+    <string name="start">start</string>
+    <string name="reset">reset</string>
+    <string name="breathe_and_let_go">Breathe and let go</string>
+    <string name="note_optional">note (optional)</string>
+    <string name="breathing_exercise">Breathing Exercise</string>
+    <string name="i_want_to_inhale_for">I want to inhale for:</string>
+    <string name="seconds">seconds</string>
+    <string name="i_want_to_hold_for">I want to hold for:</string>
+    <string name="i_want_to_exhale_for">I want to exhale for:</string>
+    <string name="for_for">For:</string>
+    <string name="cycles">cycles</string>
 
 </resources>
