--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -202,5 +202,6 @@
     <string name="December">December</string>
     <string name="Breathe">Breathe</string>
     <string name="Other">Breathe</string>
+    <string name="Meditate">Meditate</string>
 
 </resources>
