<version new> bugs fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -200,7 +200,7 @@
     <string name="November">November</string>
     <string name="December">December</string>
     <string name="Breathe">Breathe</string>
-    <string name="Other">Breathe</string>
+    <string name="Other">Other</string>
     <string name="Meditate">Meditate</string>
 
 </resources>
