<fixed> hide action bar

--- a/app/src/main/res/values-be-rBY/strings.xml
+++ b/app/src/main/res/values-be-rBY/strings.xml
@@ -5,7 +5,7 @@
     <string name="title_dashboard">Панэль</string>
     <string name="title_notifications">Спавяшчэнні</string>
     <string name="title_activity_registration">Рэгістрацыя</string>
-    <string name="prompt_email">Емэйл</string>
+    <string name="prompt_email">Email</string>
     <string name="prompt_password">Пароль</string>
     <string name="action_sign_in">Уваход ці рэгістрацыя</string>
     <string name="action_sign_in_short">Увайсці</string>
@@ -65,7 +65,7 @@
     <string name="append">Далучаць</string>
     <string name="append_text">Append text instead of overwriting</string>
     <string name="note_not_found">Нататка не знойдзена</string>
-    <string name="email">Емэйл</string>
+    <string name="email">Email</string>
     <string name="log_in_to_vo_yk">Увайсці ў Vožyk</string>
     <string name="password">Пароль</string>
     <string name="login">Лагін</string>
@@ -80,17 +80,17 @@
     <string name="email_is_not_real">Электронная пошта не сапраўдная!</string>
     <string name="password_is_required">Пароль абавязковы!</string>
     <string name="password_accepted">Пароль прыняты</string>
-    <string name="reset_link">Каб атрымаць спасылку для скіду,увядзіце свой адрас электроннай пошты.</string>
-    <string name="reset_password">Скінуць пароль?</string>
-    <string name="error">Памылка!</string>
-    <string name="logged_in_successfully">Уваход паспяховы</string>
-    <string name="password_contain_characters">Пароль мусіць быць больш за 5 сімвалаў</string>
-    <string name="link_sent">Спасылка,дасланая на вашу электронную пошту.</string>
-    <string name="error_link">Памылка ! Спасылка не даслана</string>
-    <string name="password_contain">Пароль змяшчае 8 сімвалаў, вялікія і малыя літары, лічбу і спецыяльны сімвал</string>
-    <string name="confirm_password_required">Патрабуецца пацвердзіць пароль</string>
-    <string name="same_pass_conf">Пароль і пароль для пацверджання павінны быць аднолькавымі</string>
-    <string name="verification_email_sent">Электронны ліст для праверкі быў адпраўлены</string>
+    <string name="reset_link">Enter Your Email To Received Reset Link.</string>
+    <string name="reset_password">Reset Password?</string>
+    <string name="error">Error!</string>
+    <string name="logged_in_successfully">Logged in Successfully</string>
+    <string name="password_contain_characters">Password Must be >= 6 Characters</string>
+    <string name="link_sent">Reset Link Sent To Your Email.</string>
+    <string name="error_link">Error ! Reset Link is Not Sent</string>
+    <string name="password_contain">Password contains 8 characters,upper and lower letters,number and special character</string>
+    <string name="confirm_password_required">Confirm Password is Required.</string>
+    <string name="same_pass_conf">Password and Confirm Password must be the same</string>
+    <string name="verification_email_sent">Verification Email Has been Sent</string>
     <string name="how_was_your_mood_today">Які настрой у цябе сёння ?</string>
     <string name="month_year">Месяц год</string>
     <string name="average_mood">Сярэдні настрой</string>
@@ -118,12 +118,10 @@
     <string name="notes">Нататкі</string>
     <string name="to_do">Да зрабення</string>
     <string name="tests">Тэсты</string>
-    <string name="habits">Звычкі</string>
     <string name="about_us">Пра нас</string>
     <string name="logout">Выйсці</string>
     <string name="no_medicines">Няма лекаў</string>
     <string name="your_medicines">Вашыя лекі</string>
-    <string name="habit_tracker">Трэкер звычак</string>
     <string name="reason">Прычына</string>
     <string name="add_a_new_task">Дадаць новую задачу</string>
     <string name="task_name">Назва задачы</string>
@@ -150,11 +148,6 @@
     <string name="ocd">АКР</string>
     <string name="bipolar">Біпалярнае расстройства</string>
     <string name="adhd">СДУГ</string>
-    <string name="new_habit">Новая звычака</string>
-    <string name="habit_name">Назва звычкі:</string>
-    <string name="end_date">Дата заканчэння:</string>
-    <string name="frequency">Частата:</string>
-    <string name="add_new_habit">Дадаць новую звычку</string>
     <string name="pills">Лекі</string>
     <string name="visits">Лекары</string>
     <string name="labs">Аналізы</string>
