--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Vožyk</string>
-    <string name="title_home">Home</string>
+    <string name="title_home">Mood</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_activity_registration">Registration</string>
@@ -63,11 +63,11 @@
     <string name="note_content_description">The contents of the note</string>
     <string name="append">Append</string>
     <string name="append_text">Append text instead of overwriting</string>
-    <string name="note_not_found">Note %1$s not found</string>
+    <string name="note_not_found">Note is not found</string>
     <string name="email">Email</string>
     <string name="log_in_to_vo_yk">Log in to Vožyk</string>
     <string name="password">Password</string>
-    <string name="login">login</string>
+    <string name="login">Login</string>
     <string name="create_new_account">create new account</string>
     <string name="forgot_password">forgot password?</string>
     <string name="create_a_new_account">Create A New Account</string>
@@ -106,7 +106,7 @@
     <string name="update_times">Update Times</string>
     <string name="update_medicine">Update Medicine</string>
     <string name="profile">Profile</string>
-    <string name="touch_profile_picture_to_change">touch profile picture to change</string>
+    <string name="touch_profile_picture_to_change">Touch profile picture to change</string>
     <string name="press_to_edit_delete">Press to edit/delete</string>
     <string name="lab_test_name">Lab Test Name</string>
     <string name="time_12_12_2022">Time : 12/12/2022</string>
@@ -114,28 +114,26 @@
     <string name="info">Info</string>
     <string name="task">Task:</string>
     <string name="finishing_date">Finishing Date:</string>
-    <string name="notes">notes</string>
+    <string name="notes">Notes</string>
     <string name="to_do">To-Do</string>
-    <string name="tests">tests</string>
-    <string name="habits">habits</string>
-    <string name="about_us">about us</string>
+    <string name="tests">Tests</string>
+    <string name="about_us">About us</string>
     <string name="logout">logout</string>
     <string name="no_medicines">No Medicines</string>
     <string name="your_medicines">Your Medicines</string>
-    <string name="habit_tracker">Habit Tracker</string>
     <string name="reason">Reason</string>
     <string name="add_a_new_task">Add a New Task</string>
     <string name="task_name">Task Name</string>
     <string name="medicine_name">Medicine Name</string>
     <string name="time_1500">Time : 1500</string>
     <string name="before_food">Before food</string>
-    <string name="dose">dose</string>
+    <string name="dose">Dose</string>
     <string name="after_food">After Food</string>
     <string name="morning">Morning</string>
     <string name="afternoon">afternoon</string>
     <string name="night">Night</string>
     <string name="custom">Custom</string>
-    <string name="update">update</string>
+    <string name="update">Update</string>
     <string name="cancel">Cancel</string>
     <string name="to_do_list">To-Do List</string>
     <string name="my_completed_tasks">My Completed Tasks</string>
@@ -143,26 +141,21 @@
     <string name="dismiss">DISMISS</string>
     <string name="i_have_taken_my_medicine">I have taken my Medicine</string>
     <string name="self_assessment_quiz">Self-Assessment Quiz</string>
-    <string name="anxiety">anxiety</string>
-    <string name="depression">depression</string>
-    <string name="ptsd">ptsd</string>
-    <string name="ocd">ocd</string>
-    <string name="bipolar">bipolar</string>
-    <string name="adhd">adhd</string>
-    <string name="new_habit">New Habit</string>
-    <string name="habit_name">Habit name:</string>
-    <string name="end_date">End date:</string>
-    <string name="frequency">Frequency:</string>
-    <string name="add_new_habit">Add new habit</string>
+    <string name="anxiety">Anxiety</string>
+    <string name="depression">Depression</string>
+    <string name="ptsd">Ptsd</string>
+    <string name="ocd">Ocd</string>
+    <string name="bipolar">Bipolar</string>
+    <string name="adhd">Adhd</string>
     <string name="pills">Pills</string>
     <string name="visits">Visits</string>
     <string name="labs">Labs</string>
     <string name="_5_30_minutes">5–30 minutes</string>
     <string name="set">Set</string>
-    <string name="start">start</string>
-    <string name="reset">reset</string>
+    <string name="start">Start</string>
+    <string name="reset">Reset</string>
     <string name="breathe_and_let_go">Breathe and let go</string>
-    <string name="note_optional">note (optional)</string>
+    <string name="note_optional">Note (optional)</string>
     <string name="breathing_exercise">Breathing Exercise</string>
     <string name="i_want_to_inhale_for">I want to inhale for:</string>
     <string name="seconds">seconds</string>
@@ -171,7 +164,7 @@
     <string name="for_for">For:</string>
     <string name="cycles">cycles</string>
     <string name="medicine">medicine</string>
-    <string name="lab_doc">lab_doc</string>
+    <string name="lab_doc">Lab</string>
     <string name="mood">Mood</string>
     <string name="relax">Relax</string>
     <string name="other">Other</string>
