--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -1,24 +1,23 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Vožyk</string>
-    <string name="title_home">Дом</string>
-    <string name="title_dashboard">Панэль</string>
-    <string name="title_notifications">Спавяшчэнні</string>
-    <string name="title_activity_registration">Рэгістрацыя</string>
-    <string name="prompt_email">Емэйл</string>
-    <string name="prompt_password">Пароль</string>
-    <string name="action_sign_in">Уваход ці рэгістрацыя</string>
-    <string name="action_sign_in_short">Увайсці</string>
-    <string name="welcome">"Вітаем !"</string>
-    <string name="invalid_username">Няправільнае імя карыстальніка</string>
-    <string name="invalid_password">Пароль павінен быць больш за 5 сімвалаў</string>
-    <string name="login_failed">"Уваход не атрымаўся"</string>
-    <string name="title_activity_settings">Налады</string>
+    <string name="title_home">Mood</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="title_activity_registration">Registration</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="title_activity_settings">SettingsActivity</string>
 
-    <string name="messages_header">Паведамленні</string>
-    <string name="sync_header">Сінхранізацыя</string>
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
 
-    <string name="signature_title">Ваш подпіс</string>
+    <string name="signature_title">Your signature</string>
     <string name="reply_title">Default reply action</string>
 
     <string name="sync_title">Sync email periodically</string>
@@ -26,156 +25,149 @@
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
     <string-array name="freq">
-        <item>Штодзённа</item>
-        <item>Штотыдзень</item>
-        <item>Штомесяц</item>
+        <item>Daily</item>
+        <item>Weekly</item>
+        <item>Monthly</item>
     </string-array>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="accent_colour">Accent Colour</string>
-    <string name="launcher_title">Простыя нататкі</string>
-    <string name="apply_changes">Прымяніць змены</string>
-    <string name="background_colour">Колер фону</string>
-    <string name="colour_indicator">Колер індыкатару</string>
-    <string name="colour_navigation_bar">Колер навігацыі</string>
-    <string name="confirm_delete">Пацвердзіце выдаленне</string>
-    <string name="confirm_delete_text">Вы ўпэўнены, што хочаце выдаліць гэту нататку?</string>
-    <string name="delete">Выдаліць</string>
+    <string name="launcher_title">Simple Notes</string>
+    <string name="apply_changes">Apply Changes</string>
+    <string name="background_colour">Background Colour</string>
+    <string name="colour_indicator">Colour indicator</string>
+    <string name="colour_navigation_bar">Colour Navigation Bar</string>
+    <string name="confirm_delete">Confirm Deletion</string>
+    <string name="confirm_delete_text">Are you sure you want to delete this note?</string>
+    <string name="delete">Delete</string>
     <string name="empty_list_text">Press the button on the bottom right to add a new note!</string>
-    <string name="exception">Выключэнне: </string>
-    <string name="font_colour">Колер шрыфта</string>
-    <string name="new_note">Новая нататка</string>
-    <string name="no">Не</string>
-    <string name="note">Нататка</string>
-    <string name="search">Пошук</string>
-    <string name="settings">Налады</string>
-    <string name="share_to">Падзяліцца з:</string>
-    <string name="share">Падзяліцца</string>
-    <string name="sort">Сартаваць</string>
-    <string name="title">Назва</string>
-    <string name="yes">Так</string>
-    <string name="undo">Назад</string>
-    <string name="done">Зроблена</string>
-    <string name="get_note">Атрымаць нататку</string>
-    <string name="set_note">Усталяваць нататку</string>
-    <string name="note_change">Нататка зменена</string>
-    <string name="note_title">Назва нататкі</string>
-    <string name="note_title_description">Назва нататкі</string>
-    <string name="note_content">Змест нататкі</string>
-    <string name="note_content_description">Змест нататкі</string>
-    <string name="append">Далучаць</string>
+    <string name="exception">Exception: </string>
+    <string name="font_colour">Font Colour</string>
+    <string name="new_note">New Note</string>
+    <string name="no">No</string>
+    <string name="note">Note</string>
+    <string name="search">Search</string>
+    <string name="settings">Settings</string>
+    <string name="share_to">Share to:</string>
+    <string name="share">Share</string>
+    <string name="sort">Sort</string>
+    <string name="title">Title</string>
+    <string name="yes">Yes</string>
+    <string name="undo">Undo</string>
+    <string name="done">Done</string>
+    <string name="get_note">Get Note</string>
+    <string name="set_note">Set Note</string>
+    <string name="note_change">Note Changed</string>
+    <string name="note_title">Note Title</string>
+    <string name="note_title_description">The title of the note</string>
+    <string name="note_content">Note Content</string>
+    <string name="note_content_description">The contents of the note</string>
+    <string name="append">Append</string>
     <string name="append_text">Append text instead of overwriting</string>
-    <string name="note_not_found">Нататка не знойдзена</string>
-    <string name="email">Емэйл</string>
-    <string name="log_in_to_vo_yk">Увайсці ў Vožyk</string>
-    <string name="password">Пароль</string>
-    <string name="login">Лагін</string>
-    <string name="create_new_account">Стварыць новы акаўнт</string>
-    <string name="forgot_password">Забыліся пароль?</string>
-    <string name="create_a_new_account">Стварыць новы акаўнт</string>
-    <string name="username">Імя карыстальніка</string>
-    <string name="confirm_password">Пацвердзіць пароль</string>
-    <string name="register">Зарэгістравацца</string>
-    <string name="already_registered_login_here">Ужо зарэгістраваныя? Залагуйцеся</string>
-    <string name="email_is_required">Электронная пошта абавязковая!</string>
-    <string name="email_is_not_real">Электронная пошта не сапраўдная!</string>
-    <string name="password_is_required">Пароль абавязковы!</string>
-    <string name="password_accepted">Пароль прыняты</string>
-    <string name="reset_link">Каб атрымаць спасылку для скіду,увядзіце свой адрас электроннай пошты.</string>
-    <string name="reset_password">Скінуць пароль?</string>
-    <string name="error">Памылка!</string>
-    <string name="logged_in_successfully">Уваход паспяховы</string>
-    <string name="password_contain_characters">Пароль мусіць быць больш за 5 сімвалаў</string>
-    <string name="link_sent">Спасылка,дасланая на вашу электронную пошту.</string>
-    <string name="error_link">Памылка ! Спасылка не даслана</string>
-    <string name="password_contain">Пароль змяшчае 8 сімвалаў, вялікія і малыя літары, лічбу і спецыяльны сімвал</string>
-    <string name="confirm_password_required">Патрабуецца пацвердзіць пароль</string>
-    <string name="same_pass_conf">Пароль і пароль для пацверджання павінны быць аднолькавымі</string>
-    <string name="verification_email_sent">Электронны ліст для праверкі быў адпраўлены</string>
-    <string name="how_was_your_mood_today">Які настрой у цябе быў сёння</string>
-    <string name="month_year">Месяц год</string>
-    <string name="average_mood">Сярэдні настрой</string>
-    <string name="mood_chart">Дыяграма настрою</string>
-    <string name="weekly_mood_average">Тыднёвы сярэдні настрой</string>
-    <string name="not_enough_data_to_draw_this_chart_come_back_later">Недастаткова даных для стварэння гэтай дыяграмы.\nВярніцеся пазней!!</string>
+    <string name="note_not_found">Note is not found</string>
+    <string name="email">Email</string>
+    <string name="log_in_to_vo_yk">Log in to Vožyk</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="create_new_account">create new account</string>
+    <string name="forgot_password">forgot password?</string>
+    <string name="create_a_new_account">Create A New Account</string>
+    <string name="username">Username</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="register">Register</string>
+    <string name="already_registered_login_here">Already registered? Login here</string>
+    <string name="email_is_required">Email is Required!</string>
+    <string name="email_is_not_real">Email is not real!</string>
+    <string name="password_is_required">Password is Required</string>
+    <string name="password_accepted">Password accepted</string>
+    <string name="reset_link">Enter Your Email To Received Reset Link.</string>
+    <string name="reset_password">Reset Password?</string>
+    <string name="error">Error!</string>
+    <string name="logged_in_successfully">Logged in Successfully</string>
+    <string name="password_contain_characters">Password Must be >= 6 Characters</string>
+    <string name="link_sent">Reset Link Sent To Your Email.</string>
+    <string name="error_link">Error ! Reset Link is Not Sent</string>
+    <string name="password_contain">Password contains 8 characters,upper and lower letters,number and special character</string>
+    <string name="confirm_password_required">Confirm Password is Required.</string>
+    <string name="same_pass_conf">Password and Confirm Password must be the same</string>
+    <string name="verification_email_sent">Verification Email Has been Sent</string>
+    <string name="how_was_your_mood_today">How was your mood today?</string>
+    <string name="month_year">Month year</string>
+    <string name="average_mood">Average mood</string>
+    <string name="mood_chart">Mood Chart</string>
+    <string name="weekly_mood_average">Weekly Mood Average</string>
+    <string name="not_enough_data_to_draw_this_chart_come_back_later">Not enough data to draw this chart.\nCome back later!!</string>
     <string name="_0">0</string>
-    <string name="how_was_your_mood">Які твой настрой</string>
-    <string name="starting_date">Дата пачатку</string>
-    <string name="estimated_finishing_date">Меркаваная дата заканчэння</string>
-    <string name="name">Імя</string>
-    <string name="add_medicine">Дадаць лек</string>
-    <string name="add_lab_test">Дадаць аналіз</string>
-    <string name="update_times">Абнавіць</string>
-    <string name="update_medicine">Абнавіць лек</string>
-    <string name="profile">Профіль</string>
-    <string name="touch_profile_picture_to_change">націсніце фота профілю, каб змяніць</string>
-    <string name="press_to_edit_delete">Націсніце для рэдагавання/выдалення</string>
-    <string name="lab_test_name">Назва аналіза</string>
-    <string name="time_12_12_2022">Час : 12/12/2022</string>
-    <string name="doctor_name">Імя лекара</string>
-    <string name="info">Інфа</string>
-    <string name="task">Задача:</string>
-    <string name="finishing_date">Дата заканчэння:</string>
-    <string name="notes">Нататкі</string>
-    <string name="to_do">Да зрабення</string>
-    <string name="tests">Тэсты</string>
-    <string name="habits">Звычкі</string>
-    <string name="about_us">Пра нас</string>
-    <string name="logout">Выйсці</string>
-    <string name="no_medicines">Няма лекаў</string>
-    <string name="your_medicines">Вашыя лекі</string>
-    <string name="habit_tracker">Трэкер звычак</string>
-    <string name="reason">Прычына</string>
-    <string name="add_a_new_task">Дадаць новую задачу</string>
-    <string name="task_name">Назва задачы</string>
-    <string name="medicine_name">Назва лека</string>
-    <string name="time_1500">Час : 1500</string>
-    <string name="before_food">Перад ядой</string>
-    <string name="dose">доза</string>
-    <string name="after_food">Пасля яды</string>
-    <string name="morning">Раніцай</string>
-    <string name="afternoon">У абед</string>
-    <string name="night">Вечарам</string>
-    <string name="custom">Свой</string>
-    <string name="update">Абнавіць</string>
-    <string name="cancel">Скасаваць</string>
-    <string name="to_do_list">Спіс да зрабення</string>
-    <string name="my_completed_tasks">Выкананыя задачы</string>
-    <string name="my_pending_tasks">Мае незавершаныя задачы</string>
-    <string name="dismiss">Адхіліць</string>
-    <string name="i_have_taken_my_medicine">Я прыняў свае лекі</string>
-    <string name="self_assessment_quiz">Анкеты</string>
-    <string name="anxiety">Неспакой</string>
-    <string name="depression">Дэпрэсія</string>
-    <string name="ptsd">Посттраўматычны стрэс</string>
-    <string name="ocd">Окд</string>
-    <string name="bipolar">Біпалярнае расстройства</string>
-    <string name="adhd">СДУГ</string>
-    <string name="new_habit">Новая звычака</string>
-    <string name="habit_name">Назва звычки:</string>
-    <string name="end_date">Дата заканчэння:</string>
-    <string name="frequency">Частата:</string>
-    <string name="add_new_habit">Дадаць новую звычку</string>
-    <string name="pills">Лекі</string>
-    <string name="visits">Лекары</string>
-    <string name="labs">Аналізы</string>
-    <string name="_5_30_minutes">5–30 хвілін</string>
-    <string name="set">Усталяваць</string>
-    <string name="start">Пачаць</string>
-    <string name="reset">Скінуць</string>
-    <string name="breathe_and_let_go">Удыхні і адпусці</string>
-    <string name="note_optional">нататка (неабавязкова)</string>
-    <string name="breathing_exercise">Дыхальная гімнастыка</string>
-    <string name="i_want_to_inhale_for">Я хачу ўдыхнуць:</string>
-    <string name="seconds">секунд</string>
-    <string name="i_want_to_hold_for">Я хачу ўдыхнуць за:</string>
-    <string name="i_want_to_exhale_for">Я хачу выдыхнуць за:</string>
-    <string name="for_for">для:</string>
-    <string name="cycles">цыклаў</string>
-    <string name="medicine">лекі</string>
-    <string name="lab_doc">аналізы</string>
-    <string name="mood">Настрой</string>
-    <string name="relax">Адпачыць</string>
-    <string name="other">Іншае</string>
+    <string name="how_was_your_mood">How was your mood?</string>
+    <string name="starting_date">Starting Date</string>
+    <string name="estimated_finishing_date">Estimated Finishing Date</string>
+    <string name="name">Name</string>
+    <string name="add_medicine">Add Medicine</string>
+    <string name="add_lab_test">Add Lab Test</string>
+    <string name="update_times">Update Times</string>
+    <string name="update_medicine">Update Medicine</string>
+    <string name="profile">Profile</string>
+    <string name="touch_profile_picture_to_change">Touch profile picture to change</string>
+    <string name="press_to_edit_delete">Press to edit/delete</string>
+    <string name="lab_test_name">Lab Test Name</string>
+    <string name="time_12_12_2022">Time : 12/12/2022</string>
+    <string name="doctor_name">Doctor Name</string>
+    <string name="info">Info</string>
+    <string name="task">Task:</string>
+    <string name="finishing_date">Finishing Date:</string>
+    <string name="notes">Notes</string>
+    <string name="to_do">To-Do</string>
+    <string name="tests">Tests</string>
+    <string name="about_us">About us</string>
+    <string name="logout">logout</string>
+    <string name="no_medicines">No Medicines</string>
+    <string name="your_medicines">Your Medicines</string>
+    <string name="reason">Reason</string>
+    <string name="add_a_new_task">Add a New Task</string>
+    <string name="task_name">Task Name</string>
+    <string name="medicine_name">Medicine Name</string>
+    <string name="time_1500">Time : 1500</string>
+    <string name="before_food">Before food</string>
+    <string name="dose">Dose</string>
+    <string name="after_food">After Food</string>
+    <string name="morning">Morning</string>
+    <string name="afternoon">afternoon</string>
+    <string name="night">Night</string>
+    <string name="custom">Custom</string>
+    <string name="update">Update</string>
+    <string name="cancel">Cancel</string>
+    <string name="to_do_list">To-Do List</string>
+    <string name="my_completed_tasks">My Completed Tasks</string>
+    <string name="my_pending_tasks">My Pending Tasks</string>
+    <string name="dismiss">DISMISS</string>
+    <string name="i_have_taken_my_medicine">I have taken my Medicine</string>
+    <string name="self_assessment_quiz">Self-Assessment Quiz</string>
+    <string name="anxiety">Anxiety</string>
+    <string name="depression">Depression</string>
+    <string name="ptsd">Ptsd</string>
+    <string name="ocd">Ocd</string>
+    <string name="bipolar">Bipolar</string>
+    <string name="adhd">Adhd</string>
+    <string name="pills">Pills</string>
+    <string name="visits">Visits</string>
+    <string name="labs">Labs</string>
+    <string name="_5_30_minutes">5–30 minutes</string>
+    <string name="set">Set</string>
+    <string name="start">Start</string>
+    <string name="reset">Reset</string>
+    <string name="breathe_and_let_go">Breathe and let go</string>
+    <string name="note_optional">Note (optional)</string>
+    <string name="breathing_exercise">Breathing Exercise</string>
+    <string name="i_want_to_inhale_for">I want to inhale for:</string>
+    <string name="seconds">seconds</string>
+    <string name="i_want_to_hold_for">I want to hold for:</string>
+    <string name="i_want_to_exhale_for">I want to exhale for:</string>
+    <string name="for_for">For:</string>
+    <string name="cycles">cycles</string>
+    <string name="medicine">medicine</string>
+    <string name="lab_doc">Lab</string>
+    <string name="mood">Mood</string>
+    <string name="relax">Relax</string>
+    <string name="other">Other</string>
     <string name="english">English</string>
     <string name="belorussian">Belorussian</string>
     <string name="polish">Polish</string>
@@ -201,7 +193,7 @@
     <string name="November">November</string>
     <string name="December">December</string>
     <string name="Breathe">Breathe</string>
-    <string name="Other">Breathe</string>
+    <string name="Other">Other</string>
     <string name="Meditate">Meditate</string>
     <string name="choose_language">Choose language</string>
     <string name="change_password">Change password</string>
