--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -199,5 +199,7 @@
     <string name="change_password">Change password</string>
     <string name="change_email">Change email</string>
     <string name="delete_account">Delete account</string>
+    <string name="retry">Retry</string>
+    <string name="result">Result</string>
 
 </resources>
