--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -219,7 +219,6 @@
     <string name="over_half_the_days">Over half the days</string>
     <string name="nearly_every_day">Nearly every day</string>
     <string name="bipolar_disorder">Bipolar disorder</string>
-    <string name="not_at_all">Not at all</string>
     <string name="obsessive_compulsive_disorder">Obsessive compulsive disorder</string>
     <string name="adhd1">1. How often do you have trouble wrapping up the final details of a project, once the challenging parts have been done?</string>
     <string name="adhd2">2. How often do you have difficulty getting things in order when you have to do a task that requires organization?</string>
@@ -253,4 +252,42 @@
     <string name="ptsd3">Been constantly on guard, watchful, or easily startled?</string>
     <string name="ptsd4">Felt numb or detached from people, activities, or your surroundings?</string>
     <string name="ptsd5">Felt guilty or unable to stop blaming yourself or others for the event(s) or any problems the event(s) may have caused?</string>
+    <string name="ocd1">1. I have saved up so many things that they get in the way.</string>
+    <string name="ocd2">2. I check things more often than necessary.</string>
+    <string name="ocd3">3. I get upset if objects are not arranged properly.</string>
+    <string name="ocd4">4. I feel compelled to count while I am doing things.</string>
+    <string name="ocd5">5. I find it difficult to touch an object when I know it has been touched by strangers or certain people.</string>
+    <string name="ocd6">6. I find it difficult to control my own thoughts.</string>
+    <string name="ocd7">7. I collect things I don’t need.</string>
+    <string name="ocd8">8. I repeatedly check doors, windows, drawers, etc.</string>
+    <string name="ocd9">9. I get upset if others change the way I have arranged things.</string>
+    <string name="ocd10">10. I feel I have to repeat certain numbers.</string>
+    <string name="ocd11">11. I sometimes have to wash or clean myself simply because I feel contaminated.</string>
+    <string name="ocd12">12. I am upset by unpleasant thoughts that come into my mind against my will.</string>
+    <string name="ocd13">13. I avoid throwing things away because I am afraid I might need them later.</string>
+    <string name="ocd14">14. I repeatedly check gas and water taps and light switches after turning them off.</string>
+    <string name="ocd15">15. I need things to be arranged in a particular way.</string>
+    <string name="ocd16">16. I feel that there are good and bad numbers.</string>
+    <string name="ocd17">17. I wash my hands more often and longer than necessary.</string>
+    <string name="ocd18">18. I frequently get nasty thoughts and have difficulty in getting rid of them.</string>
+    <string name="a_little">A little"</string>
+    <string name="moderately">Moderately</string>
+    <string name="a_lot">A lot</string>
+    <string name="extremely">Extremely</string>
+    <string name="not_at_all">Not at all</string>
+    <string name="bip1">1. At times I am much more talkative or speak much faster than usual.</string>
+    <string name="bip2">2. There have been times when I was much more active or did many more things than usual.</string>
+    <string name="bip3">3. I get into moods where I feel very speeded up or irritable.</string>
+    <string name="bip4">4. There have been times when I have felt both high (elated) and low (depressed) at the same time.</string>
+    <string name="bip5">5. At times I have been much more interested in sex than usual.</string>
+    <string name="bip6">6. My self-confidence ranges from great self- doubt to equally great overconfidence.</string>
+    <string name="bip7">7. There have been GREAT variations in the quantity or quality of my work.</string>
+    <string name="bip8">8. For no apparent reason I sometimes have been VERY angry or hostile.</string>
+    <string name="bip9">9. I have periods of mental dullness and other periods of very creative thinking.</string>
+    <string name="bip10">10. At times I am greatly interested in being with people and at other times I just want to be left alone with my thoughts.</string>
+    <string name="bip11">11. I have had periods of great optimism and other periods of equally great pessimism.</string>
+    <string name="bip12">12. I have had periods of tearfulness and crying and other times when I laugh and joke excessively.</string>
+    <string name="somewhat">Somewhat</string>
+    <string name="quite_a_lot">Quite a lot</string>
+    <string name="very_much">Very much</string>
 </resources>
